Move app from /data to /app

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    root /data/public;
+    root /app/public;
     index index.html index.;
     server_name _;
 }
